--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "0.3.0",
     "@react-navigation/native": "^6.1.15",
     "@react-navigation/stack": "^6.3.27",
     "@reduxjs/toolkit": "^2.2.1",
@@ -18,10 +19,9 @@
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-feather": "^1.1.2",
-    "react-native-gesture-handler": "^2.15.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-svg": "^15.1.0",
-    "@react-native-masked-view/masked-view": "0.3.0"
+    "react-native-gesture-handler": "~2.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
