--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "my-new-project",
-    "slug": "my-new-project",
+    "name": "Food App",
+    "slug": "Food App",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
